# rust-gzdoom

./: AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  HANDOFF.md  HANDOFF_TO_CODEX.md  NEXT_STEPS.md  PROJECT_STATE.md  README.md  ROADMAP.md  TODO.md  UZDOOM_PARITY_TODO.md
app/: Cargo.toml
app/src/: main.rs
config/: Cargo.toml
config/src/: cvar.rs  lib.rs
engine-core/: Cargo.toml
engine-core/src/: engine.rs  game.rs  lib.rs
fixed-point/: Cargo.toml
fixed-point/src/: lib.rs
gameplay/: Cargo.toml
gameplay/src/: lib.rs
input/: Cargo.toml
input/src/: lib.rs
level/: Cargo.toml
level/src/: level.rs  lib.rs  parser.rs
render-api/: Cargo.toml
render-api/src/: lib.rs
render-vulkan/: Cargo.toml
render-vulkan/shaders/: tex.frag  tex.frag.spv  tex.frag.spvasm  tex.vert  tex.vert.spv  tex.vert.spvasm
render-vulkan/src/: lib.rs
src/: main.rs
wad/: Cargo.toml
wad/src/: lib.rs  parser.rs
wayland-bootstrap/: Cargo.toml
wayland-bootstrap/src/: main.rs
