[package]
name = "engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description = "Core game loop and engine traits for rust-gzdoom"

[dependencies]
anyhow.workspace = true
glam = "0.24"
level.workspace = true
gameplay.workspace = true
input.workspace = true
